Refactor toList()